src/objects/Cash_Advance__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Payment_Date__c</fullName>
        <label>Full Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Cash Advances</relationshipLabel>
        <relationshipName>Cash_Advances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cash Advance</label>
    <nameField>
        <displayFormat>CA-{0000000}</displayFormat>
        <label>Cash Advance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Advances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>